--- a/db_r/Dockerfile
+++ b/db_r/Dockerfile
@@ -7,7 +7,7 @@ RUN touch /var/log/mysql/mysql-bin.log
 RUN chown -R mysql:mysql /var/log/mysql
 
 ADD "slave.cnf" "/etc/mysql/conf.d"
-ADD "slave-start.sh" "/docker-entrypoint-initdb.d"
+ADD "slave.sh" "/docker-entrypoint-initdb.d"
 
 EXPOSE 3306
 CMD ["mysqld"]
